<?xml version="1.0"?>
<package format="2">
  <name>acura_steering</name>
  <version>0.0.1</version>
  <description>translates steerin angle from the acura's OBD2 port to ROS topic</description>

  <maintainer email="andrew@ainstein.ai">andrew</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/aerotenna</url>

  <author email="andrew@ainstein.ai">Andrew Megaris</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>

  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>

  <export>

  </export>

</package>
